chore: update version to 2.8.7-NAM and authorship